# acnestis

./: .pre-commit-config.yaml  Makefile  README.md  noxfile.py  pyproject.toml
acnestis/: command.py  processing.py  steps.py  yaml.py
tests/: test_base.py  tools.py
tests/data/001_source_simple_copy/rosi/: .acnestis.py  .acnestis.yaml
tests/data/002_concat_poem/poem.txt/: .acnestis.py  .acnestis.yaml
tests/data/002_concat_poem_result/: poem.txt
tests/data/003_concat_poem_overwrite/poem.txt/: .acnestis.py
tests/data/003_concat_poem_overwrite_result/: poem.txt
tests/data/003_concat_poem_overwrite_result/poem_origin/: 02_center.txt
tests/data/004_code/: .acnestis.py
tests/data/004_code_result/: input.txt
tests/data/004_concat_poem_overwrite_external/: .acnestis.py
tests/data/005_code/: .acnestis.py  .acnestis.yaml
tests/data/005_code_py_globals/: .acnestis.py  .acnestis.yaml
tests/data/006_docker_svgo/: .acnestis.py  .acnestis.yaml
tests/data/007_git/: .acnestis.py  .acnestis.yaml
tests/data/008_git_processing/: .acnestis.yaml
tests/data/008_git_processing/poem.txt/: 3.txt
tests/data/008_git_processing_result/: poem.txt
tests/data/009_git_subfolder/: .acnestis.yaml
tests/data/009_git_subfolder_result/: 1.txt
tests/data/010_subprocess_git/: .acnestis.py  .acnestis.yaml
tests/data/012_sub_git_copy_2/: .acnestis.yaml
tests/data/013_simple_aggregate/: .acnestis.yaml  desc.txt
tests/data/013_simple_aggregate_result/: all.json
tests/data/014_aggregate_two_poems_result/: all.json
tests/docker_svgo/: Dockerfile  Makefile
(+4 files in other folders)
