[tool.poetry]
name = "acnestis"
version = "0.1.1"
description = "data collection, aggregation and convertion tool"
authors = ["oduvan <a.lyabah@checkio.org>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/oduvan/acnestis"

[tool.poetry.dependencies]
python = ">3.8"
pyyaml = "^6.0"
docker = "^6.1.3"
gitpython = "^3.1.31"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
nox = "^2023.4.22"
ipdb = "^0.13.13"
black = "^23.3.0"
mypy = "^1.3.0"

[tool.poetry.scripts]
acnestis = 'acnestis.command:console'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
